--- a/project-desktop.css
+++ b/project-desktop.css
@@ -48,3 +48,15 @@
 .profile .bottom-icon:hover {
     width: 160px;
 }
+
+
+.aboutme-img {
+    margin-top: 50px;
+}
+.aboutme-img img {
+    height: 250px;
+    width: 230px;
+}
+.aboutme-desc {
+    text-align: left;
+}
