--- a/project-mobile.css
+++ b/project-mobile.css
@@ -94,3 +94,39 @@ a {
     display: table;
     clear: both;
 }
+
+
+
+h2 {
+    font-size: 1.5rem;
+    text-align: center;
+}
+.about-me {
+    background-color: #39a4ac;
+    padding: 1% 7%;
+    color: white;
+    text-align: center;
+}
+.about-me::after {
+    clear: both;
+    display: table;
+    content: '';
+}
+.dotted-hr {
+    border: dotted 6px white;
+    margin: 20px auto;
+    border-bottom: none;
+    width: 70px;
+}
+.aboutme-img img {
+    border: 5px solid white;
+    border-radius: 50%;
+    height: 200px;
+    width: 200px;
+}
+.aboutme-img p {
+    text-align: center;
+}
+.aboutme-img a {
+    font-size: 1.3rem;
+}
